--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/project.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/project.properties
@@ -31,12 +31,12 @@ sdhpsaddon.redirect.order=/my-account/application/%s
 # For example you may setup a URL mapping as follows:
 # NOTE you should define your mapping in your config/local.properties rather
 # than here in the extension's properties file.
-website.sdh.http=http\://sdh.local\:9001/sdhstorefront
-website.sdh.https=https\://sdh.local\:9002/sdhstorefront
+website.sdh.http=http\://publicsector.local\:9001/sdhstorefront
+website.sdh.https=https\://publicsector.local\:9002/sdhstorefront
 
 # Qualified media URLs for each CMSWebSite used to load images and other media
-media.sdh.http=http\://sdh.local\:9001
-media.sdh.https=https\://sdh.local\:9002
+media.sdh.http=http\://publicsector.local\:9001
+media.sdh.https=https\://publicsector.local\:9002
 
 share.fb.appid=145634995501895
 
@@ -55,8 +55,8 @@ sdh.orbeon.address.is-address-book-not-empty=primary-address-is-address-book-not
 sdh.url.whitelist=/my-account,/my-account/my-relationships,/my-account/address-book
 
 ##### orbeon properties #####
-xyformsservices.orbeon.url.address=http\://sdh.local\:9001/orbeon
-xyformsstorefrontcommons.orbeon.persistence-api.hostname=sdh.local
+xyformsservices.orbeon.url.address=http\://publicsector.local\:9001/orbeon
+xyformsstorefrontcommons.orbeon.persistence-api.hostname=publicsector.local
 xyformsstorefrontcommons.orbeon.persistence-api.port=9002
 
 # Specify location of the orbeon config copied to hybris config folder
