--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/.classpath
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/.classpath
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" output="eclipsebin/classes" path="testsrc"/>
+	<classpathentry kind="src" path="/assistedservicestorefront"/>
+	<classpathentry exported="true" kind="src" path="/acceleratorstorefrontcommons"/>
+	<classpathentry exported="true" kind="lib" path="resources"/>
+	<classpathentry kind="src" output="eclipsebin/classes" path="src"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sdhcore"/>
+	<classpathentry exported="true" kind="src" path="/xyformsweb"/>
+	<classpathentry kind="src" output="eclipsebin/web/classes" path="acceleratoraddon/web/src"/>
+	<classpathentry kind="src" path="/relationshipservices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/billfacades"/>
+	<classpathentry kind="src" path="gensrc"/>
+	<classpathentry kind="src" path="/relationshipfacades"/>
+	<classpathentry exported="true" kind="src" path="/xyformsstorefrontcommons"/>
+	<classpathentry exported="true" kind="src" path="/publicsectorfacades"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="/platform"/>
 	<classpathentry exported="true" kind="src" path="/addonsupport"/>
-	<classpathentry exported="true" kind="src" path="/acceleratorstorefrontcommons"/>
-	<classpathentry exported="true" kind="src" path="/xyformsstorefrontcommons"/>
-	<classpathentry exported="true" kind="src" path="/xyformsweb"/>
-	<classpathentry exported="true" kind="src" path="/publicsectorfacades"/>
-	<classpathentry exported="true" kind="lib" path="resources"/>
-	<classpathentry kind="src" output="eclipsebin/classes" path="src"/>
-	<classpathentry kind="src" output="eclipsebin/web/classes" path="acceleratoraddon/web/src"/>
-	<classpathentry kind="src" output="eclipsebin/classes" path="testsrc"/>
-	<classpathentry kind="src" output="eclipsebin/classes" path="gensrc"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/billfacades"/>
 	<classpathentry kind="src" path="/commerceservices"/>
-	<classpathentry kind="src" path="/relationshipfacades"/>
-	<classpathentry kind="src" path="/relationshipservices"/>
-	<classpathentry kind="src" path="/assistedservicestorefront"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sdhcore"/>
 	<classpathentry kind="output" path="eclipsebin/notused"/>
 </classpath>
