--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -41,11 +41,31 @@ sdh.creamodcontribuyente.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/ingr
 sdh.creamodcontribuyente.user=wspouser
 sdh.creamodcontribuyente.password=POw3bs3rv18
 
-mail.from=hcea2018@gmail.com
-mail.replyto=hcea2018@gmail.com
-mail.smtp.server=smtp.gmail.com
-mail.smtp.port=587
-mail.smtp.user=hcea2018@gmail.com
-mail.smtp.password=hcea@1234
-mail.use.tls=true
+#emailservice.send.enabled = true
+#mail.from=hcea2018@gmail.com
+#mail.replyto=hcea2018@gmail.com
+#mail.smtp.server=smtp.gmail.com
+#mail.smtp.port=587
+#mail.smtp.user=hcea2018@gmail.com
+#mail.smtp.password=hcea@1234
+#mail.use.tls=true
 
+#emailservice.send.enabled=true
+#mail.from=jair.r04@gmail.com
+#mail.replyto=jair.r04@gmail.com
+#mail.smtp.server=smtp.gmail.com
+#mail.smtp.port=587
+#mail.smtp.user=jair.r04@gmail.com
+#mail.smtp.password=followyourdreams
+#mail.use.tls=true
+
+mail.from=jair.r04@gmail.com
+mail.replyto=jair.r04@gmail.com
+mail.smtp.server=smtp.googlemail.com
+mail.smtp.port=587
+mail.smtp.auth=true
+mail.smtp.debug=true
+mail.smtp.user=jair.r04@gmail.com
+mail.smtp.password=qecyfbujgqkpnvih
+mail.use.tls=true
+mail.smtp.starttls.enable=true
