--- a/hybris/hybris/bin/custom/sdh/sdhfacades/.project
+++ b/hybris/hybris/bin/custom/sdh/sdhfacades/.project
@@ -12,6 +12,7 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>org.eclipse.jem.workbench.JavaEMFNature</nature>
 		<nature>org.springframework.ide.eclipse.core.springnature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>com.hybris.hyeclipse.tsv.hybris</nature>
