--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -41,6 +41,14 @@ sdh.creamodcontribuyente.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/ingr
 sdh.creamodcontribuyente.user=wspouser
 sdh.creamodcontribuyente.password=POw3bs3rv18
 
+sdh.preguntareto.urlhttp:http://sdhcipodev.shd.gov.co:50100/RESTAdapter/preguntaReto
+sdh.preguntareto.user=wspouser
+sdh.preguntareto.password=POw3bs3rv18
+
+sdh.soapcrmsendemail.urlhttp=http://SDHCICRMDEV.shd.gov.co:8000/sap/bc/srt/rfc/sap/zws_hysend_mail/100/zws_hysend_mail/zws_hysend_mail
+sdh.soapcrmsendemail.user=oarredondo
+sdh.soapcrmsendemail.password=inicio2018
+
 #emailservice.send.enabled = true
 #mail.from=hcea2018@gmail.com
 #mail.replyto=hcea2018@gmail.com
