Temporal de Certificacion

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -41,6 +41,11 @@ sdh.creamodcontribuyente.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/ingr
 sdh.creamodcontribuyente.user=wspouser
 sdh.creamodcontribuyente.password=POw3bs3rv18
 
+sdh.certificarit.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/certifRIT/
+sdh.certificarit.user=wspouser
+sdh.certificarit.password=POw3bs3rv18
+
+
 #emailservice.send.enabled = true
 #mail.from=hcea2018@gmail.com
 #mail.replyto=hcea2018@gmail.com
