--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -45,6 +45,10 @@ sdh.preguntareto.urlhttp:http://sdhcipodev.shd.gov.co:50100/RESTAdapter/pregunta
 sdh.preguntareto.user=wspouser
 sdh.preguntareto.password=POw3bs3rv18
 
+sdh.calcpublicidad.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/calculoImp/Publicidad
+sdh.calcpublicidad.user=wspouser
+sdh.calcpublicidad.password=POw3bs3rv18
+
 mail.from=jair.r04@gmail.com
 mail.replyto=jair.r04@gmail.com
 mail.smtp.server=smtp.googlemail.com
