Consumo de servicio de objetos

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -49,6 +49,10 @@ sdh.calcpublicidad.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/calculoImp
 sdh.calcpublicidad.user=wspouser
 sdh.calcpublicidad.password=POw3bs3rv18
 
+sdh.detallePublicidad.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/infObjeto/Publicidad
+sdh.detallePublicidad.user=wspouser
+sdh.detallePublicidad.password=POw3bs3rv18
+
 mail.from=jair.r04@gmail.com
 mail.replyto=jair.r04@gmail.com
 mail.smtp.server=smtp.googlemail.com
