--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -45,6 +45,14 @@ sdh.preguntareto.urlhttp:http://sdhcipodev.shd.gov.co:50100/RESTAdapter/pregunta
 sdh.preguntareto.user=wspouser
 sdh.preguntareto.password=POw3bs3rv18
 
+sdh.detalleGasolina.url:http://sdhcipodev.shd.gov.co:50100/RESTAdapter/infObjeto/Gasolina
+sdh.detalleGasolina.user=wspouser
+sdh.detalleGasolina.password=POw3bs3rv18
+
+sdh.calculoGasolina.url:http://sdhcipodev.shd.gov.co:50100/RESTAdapter/calculoImp/Gasolina
+sdh.calculoGasolina.user=wspouser
+sdh.calculoGasolina.password=POw3bs3rv18
+
 mail.from=jair.r04@gmail.com
 mail.replyto=jair.r04@gmail.com
 mail.smtp.server=smtp.googlemail.com
