--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -68,8 +68,7 @@ sdh.preguntareto.urlhttp:http://sdhcipodev.shd.gov.co:50100/RESTAdapter/pregunta
 sdh.preguntareto.user=wspouser
 sdh.preguntareto.password=POw3bs3rv18
 
-<<<<<<< HEAD
-<<<<<<< HEAD
+#INI Federico Flores Dimas - Impuesto Gasolina
 sdh.detalleGasolina.url:http://sdhcipodev.shd.gov.co:50100/RESTAdapter/infObjeto/Gasolina
 sdh.detalleGasolina.user=wspouser
 sdh.detalleGasolina.password=POw3bs3rv18
@@ -77,7 +76,8 @@ sdh.detalleGasolina.password=POw3bs3rv18
 sdh.calculoGasolina.url:http://sdhcipodev.shd.gov.co:50100/RESTAdapter/calculoImp/Gasolina
 sdh.calculoGasolina.user=wspouser
 sdh.calculoGasolina.password=POw3bs3rv18
-=======
+#FIN Federico Flores Dimas - Impuesto Gasolina
+
 =======
 sdh.calcpublicidad.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/calculoImp/Publicidad
 sdh.calcpublicidad.user=wspouser
