--- a/hybris/hybris/bin/custom/sdh/sdhstorefront/.classpath
+++ b/hybris/hybris/bin/custom/sdh/sdhstorefront/.classpath
@@ -11,7 +11,7 @@
 	<classpathentry exported="true" kind="lib" path="resources"/>
 	<classpathentry kind="src" output="eclipsebin/web/classes" path="web/src"/>
 	<classpathentry kind="src" output="eclipsebin/web/classes" path="web/testsrc"/>
-	<classpathentry kind="src" path="/platform"/>
+	<classpathentry exported="true" kind="src" path="/platform"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/xyformsstorefrontcommons"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/smarteditaddon"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/assistedservicestorefront"/>
