Se agrega servicio para generar declaracion

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -86,6 +86,10 @@ sdh.detallePublicidad.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/infObje
 sdh.detallePublicidad.user=wspouser
 sdh.detallePublicidad.password=POw3bs3rv18
 
+sdh.generaDeclaracion.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/generaDeclaracion
+sdh.generaDeclaracion.user=wspouser
+sdh.generaDeclaracion.password=POw3bs3rv18
+
 sdh.certifNomb.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/ingreso/certifNomb/
 sdh.certifNomb.user=wspouser
 sdh.certifNomb.password=POw3bs3rv18
