pseAlmacen test No. 1

--- a/hybris/hybris/bin/custom/sdh/sdhpse/resources/sdhPPE.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpse/resources/sdhPPE.properties
@@ -1,5 +1,5 @@
 # define keystore
-org.apache.ws.security.crypto.merlin.file=pseAlmacen.jks
+org.apache.ws.security.crypto.merlin.file=pseAlmacen1.jks
 org.apache.ws.security.crypto.merlin.keystore.password=pruebas2019
 org.apache.ws.security.crypto.merlin.keystore.type=jks
 
