Modificaciones en pantalla de declaracion de gasolina para enviar informacion que se utiliza en pantalla activada con boton Pagar en linea

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -77,6 +77,11 @@ sdh.calculoGasolina.url:http://sdhcipodev.shd.gov.co:50100/RESTAdapter/calculoIm
 sdh.calculoGasolina.user=wspouser
 sdh.calculoGasolina.password=POw3bs3rv18
 #FIN Federico Flores Dimas - Impuesto Gasolina
+#INI Federico Flores Dimas - Consulta previa al pago
+sdh.detallePago.url:http://sdhcipodev.shd.gov.co:50100/RESTAdapter/gestban/consulPago
+sdh.detallePago.user=wspouser
+sdh.detallePago.password=POw3bs3rv18
+#FIN Federico Flores Dimas - Consulta previa al pago
 
 sdh.calcpublicidad.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/calculoImp/Publicidad
 sdh.calcpublicidad.user=wspouser
