PSE BankListCatalog CronJob

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -96,14 +96,20 @@ sdh.certifNomb.password=POw3bs3rv18
 sdh.certifNomb.authorization.percentage=0.95
 
 #PSE configuration attributes
-sdh.pse.pseURL=http://localhost/PSEWebServices3/MainServices.asmx
-sdh.pse.ppeCode=10102020
+sdh.pse.pseURL=http://200.1.124.65/PSEWebServices3/MainServices.asmx
+sdh.pse.ppeCode=8999990619
+sdh.pse.serviceCode=2308
+sdh.pse.entityUrl=http://localhost/SamplePPE
+
 sdh.pse.bankCode=1234
-sdh.pse.serviceCode=1
 sdh.pse.authCode=121982912
 sdh.pse.creditServiceCode=111111
 sdh.pse.creditCompanyCode=0123456789
 sdh.pse.companyAuthCode=0123
+
+sdh.pse.messageHeader.to=ToMessage
+sdh.pse.messageHeader.from=FromMessage
+sdh.pse.messageHeader.representingParty=RepresentingPartyMessage
 
 mail.from=jair.r04@gmail.com
 sdh.detallePublicidad.password=POw3bs3rv18
