--- a/hybris/hybris/bin/custom/sdh/sdhcore/.classpath
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/.classpath
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="eclipsebin/classes" path="testsrc"/>
 	<classpathentry exported="true" kind="src" path="/xyformsservices"/>
+	<classpathentry kind="src" output="eclipsebin/classes" path="testsrc"/>
 	<classpathentry exported="true" kind="src" path="/acceleratorcms"/>
 	<classpathentry exported="true" kind="lib" path="lib/axis-1.4.jar"/>
 	<classpathentry exported="true" kind="src" path="/solrserver"/>
 	<classpathentry exported="true" kind="lib" path="resources"/>
 	<classpathentry kind="src" output="eclipsebin/classes" path="src"/>
+	<classpathentry exported="true" kind="src" path="/sdhpse"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="/platform"/>
 	<classpathentry exported="true" kind="lib" path="lib/wsdl4j-1.6.2.jar"/>
