--- a/hybris/hybris/bin/custom/sdh/sdhpse/build.xml
+++ b/hybris/hybris/bin/custom/sdh/sdhpse/build.xml
@@ -9,7 +9,7 @@
  Information and shall use it only in accordance with the terms of the
  license agreement you entered into with SAP.
 -->
-<project name="sdhpse" default="all">
+<project name="sdhpsaddon" default="all">
 	<property file="platformhome.properties" />
 
 	<!-- next line is only for eclipse to get rid of warnings -->
