PSE + Redirect to Bank URL

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -99,7 +99,7 @@ sdh.certifNomb.authorization.percentage=0.95
 sdh.pse.pseURL=http://200.1.124.65/PSEWebServices3/MainServices.asmx
 sdh.pse.ppeCode=8999990619
 sdh.pse.serviceCode=2308
-sdh.pse.entityUrl=http://localhost/SamplePPE
+sdh.pse.entityUrl=https://sdhdev.local:9002/sdhstorefront/es/
 
 sdh.pse.bankCode=1234
 sdh.pse.authCode=121982912
