Cambio en consulta de periodo

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -46,6 +46,8 @@ sdh.certificarit.user=wspouser
 sdh.certificarit.password=POw3bs3rv18
 
 
+
+
 #emailservice.send.enabled = true
 #mail.from=hcea2018@gmail.com
 #mail.replyto=hcea2018@gmail.com
@@ -116,6 +118,13 @@ sdh.pse.companyAuthCode=0123
 sdh.pse.messageHeader.to=ToMessage
 sdh.pse.messageHeader.from=FromMessage
 sdh.pse.messageHeader.representingParty=RepresentingPartyMessage
+
+
+#INI Maria Luisa Torres - Declaraciones/Certificacion PDF
+sdh.declaracerti.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/docs/imprimeCertif
+sdh.declaracerti.user=wspouser
+sdh.declaracerti.password=POw3bs3rv18
+#FIN Maria Luisa Torres - Declaraciones/Certificacion PDF
 
 mail.from=jair.r04@gmail.com
 sdh.detallePublicidad.password=POw3bs3rv18
