Ajustes en sobretasa a la gasolina (eliminar ceros a la izquierda, habilitar/deshabilitar boton pagar en linea, ) ajustes en pagina de pse (boton regresar, catalogo de periodos)

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -73,16 +73,16 @@ sdh.pse.notifPago.user=wspouser
 sdh.pse.notifPago.password=POw3bs3rv18
 
 #INI Federico Flores Dimas - Impuesto Gasolina
-sdh.detalleGasolina.url:http://sdhcipodev.shd.gov.co:50100/RESTAdapter/infObjeto/Gasolina
+sdh.detalleGasolina.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/infObjeto/Gasolina
 sdh.detalleGasolina.user=wspouser
 sdh.detalleGasolina.password=POw3bs3rv18
 
-sdh.calculoGasolina.url:http://sdhcipodev.shd.gov.co:50100/RESTAdapter/calculoImp/Gasolina
+sdh.calculoGasolina.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/calculoImp/Gasolina
 sdh.calculoGasolina.user=wspouser
 sdh.calculoGasolina.password=POw3bs3rv18
 #FIN Federico Flores Dimas - Impuesto Gasolina
 #INI Federico Flores Dimas - Consulta previa al pago
-sdh.detallePago.url:http://sdhcipodev.shd.gov.co:50100/RESTAdapter/gestban/consulPago
+sdh.detallePago.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/gestban/consulPago
 sdh.detallePago.user=wspouser
 sdh.detallePago.password=POw3bs3rv18
 #FIN Federico Flores Dimas - Consulta previa al pago
@@ -103,6 +103,10 @@ sdh.certifNomb.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/ingreso/certif
 sdh.certifNomb.user=wspouser
 sdh.certifNomb.password=POw3bs3rv18
 sdh.certifNomb.authorization.percentage=0.95
+
+#INI Federico Flores Dimas - Configuracion Sobretasa a la gasolina
+sdh.sobretasaGasolina.cantidadAnioGravableBusqueda=6
+#FIN Federico Flores Dimas - Configuracion Sobretasa a la gasolina
 
 #PSE configuration attributes
 sdh.pse.pseURL=http://200.1.124.65/PSEWebServices3/MainServices.asmx
