Se agrega servicio para envio de correo

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -108,6 +108,11 @@ sdh.certifNomb.user=wspouser
 sdh.certifNomb.password=POw3bs3rv18
 sdh.certifNomb.authorization.percentage=0.95
 
+
+sdh.sendEmail.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/sendMail/
+sdh.sendEmail.user=wspouser
+sdh.sendEmail.password=POw3bs3rv18
+
 #INI Federico Flores Dimas - Configuracion Sobretasa a la gasolina
 sdh.sobretasaGasolina.cantidadAnioGravableBusqueda=6
 #FIN Federico Flores Dimas - Configuracion Sobretasa a la gasolina
