Ajustes para pdf de consultas

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -128,7 +128,19 @@ sdh.pse.messageHeader.representingParty=RepresentingPartyMessage
 sdh.declaracerti.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/docs/imprimeCertif
 sdh.declaracerti.user=wspouser
 sdh.declaracerti.password=POw3bs3rv18
+
+
+sdh.consulPagos.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/docs/consulPagos
+sdh.consulPagos.user=wspouser
+sdh.consulPagos.password=POw3bs3rv18
+
+
+sdh.imprimePago.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/docs/imprimePago/
+sdh.imprimePago.user=wspouser
+sdh.imprimePago.password=POw3bs3rv18
 #FIN Maria Luisa Torres - Declaraciones/Certificacion PDF
+
+
 
 mail.from=jair.r04@gmail.com
 sdh.detallePublicidad.password=POw3bs3rv18
