Modificaciones en Publicidad Exterior para incluir funcionalidad de PSE

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -81,7 +81,7 @@ sdh.detalleGasolina.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infObjet
 sdh.detalleGasolina.user=wspouser
 sdh.detalleGasolina.password=POw3bs3rv18
 
-sdh.calculoGasolina.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/Gasolina
+sdh.calculoGasolina.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/Gasolina
 sdh.calculoGasolina.user=wspouser
 sdh.calculoGasolina.password=POw3bs3rv18
 #FIN Federico Flores Dimas - Impuesto Gasolina
