Consiliaciones y pagina para solicitar roles en el registro

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -168,3 +168,6 @@ mail.smtp.user=jair.r04@gmail.com
 mail.smtp.password=qecyfbujgqkpnvih
 mail.use.tls=true
 mail.smtp.starttls.enable=true
+
+import.p7z.max.upload.size.bytes=10240
+
