--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -99,6 +99,9 @@ sdh.detallePago.password=POw3bs3rv18
 sdh.radicaDelin.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infObjeto/radicaDelin
 sdh.radicaDelin.user=wspouser
 sdh.radicaDelin.password=POw3bs3rv18
+sdh.infObjetoDelineacion.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infObjeto/Delineacion
+sdh.infObjetoDelineacion.user=wspouser
+sdh.infObjetoDelineacion.password=POw3bs3rv18
 #FIN Federico Flores Dimas - Delineacion urbana
 
 sdh.calcpublicidad.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/Publicidad
