Delineacion urbana: funcionalidad boton calcular

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -102,6 +102,9 @@ sdh.radicaDelin.password=POw3bs3rv18
 sdh.infObjetoDelineacion.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infObjeto/Delineacion
 sdh.infObjetoDelineacion.user=wspouser
 sdh.infObjetoDelineacion.password=POw3bs3rv18
+sdh.calculoImpDelineacion.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/Delineacion
+sdh.calculoImpDelineacion.user=wspouser
+sdh.calculoImpDelineacion.password=POw3bs3rv18
 #FIN Federico Flores Dimas - Delineacion urbana
 
 sdh.calcpublicidad.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/Publicidad
