Ajustes para ver la estructura ICA en el CustomerData

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -107,6 +107,17 @@ sdh.calculoImpDelineacion.user=wspouser
 sdh.calculoImpDelineacion.password=POw3bs3rv18
 #FIN Federico Flores Dimas - Delineacion urbana
 
+
+sdh.ica.infoObjeto.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infObjeto/ICA
+sdh.ica.user=wspouser
+sdh.ica.password=POw3bs3rv18
+
+sdh.ica.calculoImp.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/ICA
+sdh.ica.user=wspouser
+sdh.ica.password=POw3bs3rv18
+
+
+
 sdh.calcpublicidad.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/Publicidad
 sdh.calcpublicidad.user=wspouser
 sdh.calcpublicidad.password=POw3bs3rv18
