Detalle parcial de ICA

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -109,12 +109,12 @@ sdh.calculoImpDelineacion.password=POw3bs3rv18
 
 
 sdh.ica.infoObjeto.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infObjeto/ICA
-sdh.ica.user=wspouser
-sdh.ica.password=POw3bs3rv18
+sdh.ica.infoObjeto.user=wspouser
+sdh.ica.infoObjeto.password=POw3bs3rv18
 
 sdh.ica.calculoImp.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/ICA
-sdh.ica.user=wspouser
-sdh.ica.password=POw3bs3rv18
+sdh.ica.calculoImp.user=wspouser
+sdh.ica.calculoImp.password=POw3bs3rv18
 
 
 
