--- a/hybris/hybris/bin/custom/sdh/sdhstorefront/project.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhstorefront/project.properties
@@ -126,7 +126,7 @@ googleApiVersion=3.7
 google.geocoding.reverse.url=https://maps.googleapis.com/maps/api/geocode/xml
 
 # Google Analytics Tracking IDs. Can be host specific, as listed below.
-google.analytics.tracking.id=your_google_analytics_tracking_id
+google.analytics.tracking.id=UA-10493258-39
 
 # Google Analytics Tracking IDs properties for the local system
 #google.analytics.tracking.id.electronics.local=
