--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -181,6 +181,22 @@ sdh.imprimeCertDeclara.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/docs/
 sdh.imprimeCertDeclara.user=wspouser
 sdh.imprimeCertDeclara.password=POw3bs3rv18
 
+sdh.reteica.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infObjeto/reteICA
+sdh.reteica.user=wspouser
+sdh.reteica.password=POw3bs3rv18
+
+sdh.reteica.calculo.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infObjeto/reteICA
+sdh.reteica.calculo.user=wspouser
+sdh.reteica.calculo.password=POw3bs3rv18
+
+sdh.reteica.ftp.url=172.18.39.47
+sdh.reteica.ftp.port=21
+sdh.reteica.ftp.username=anonymous
+sdh.reteica.ftp.password=
+sdh.reteica.ftp.dir=/srv/ftp
+
+sdh.reteica.file.max.upload.size.bytes=10240
+
 #FIN Maria Luisa Torres - Declaraciones/Certificacion PDF
 
 
