Se cambia escritura de archivo por ftp a escritura a un directorio que sea un nfs en un servidor externo

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -195,7 +195,10 @@ sdh.reteica.ftp.username=anonymous
 sdh.reteica.ftp.password=
 sdh.reteica.ftp.dir=/srv/ftp
 
-sdh.reteica.file.max.upload.size.bytes=10240
+sdh.reteica.nfs.directory=C:\\dev\\
+
+#B
+sdh.reteica.file.max.upload.size.bytes=10485760
 
 #FIN Maria Luisa Torres - Declaraciones/Certificacion PDF
 
