Credibanco - REST Service - Secure Connection

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -196,6 +196,7 @@ sdh.reteica.ftp.password=
 sdh.reteica.ftp.dir=/srv/ftp
 
 sdh.reteica.file.max.upload.size.bytes=10240
+sdh.conciliaciones.ftp.server=172.18.39.47
 
 #FIN Maria Luisa Torres - Declaraciones/Certificacion PDF
 
@@ -213,7 +214,9 @@ mail.smtp.password=qecyfbujgqkpnvih
 mail.use.tls=true
 mail.smtp.starttls.enable=true
 
-import.p7z.max.upload.size.bytes=10240
+import.p7z.max.upload.size.bytes=1073741824
+#import.p7z.max.upload.size.bytes=10240
+
 
 recaptcha.publickey=6LeWLJkUAAAAAO8X1Ed3CrbiC50v89miDYT1VmiJ
 recaptcha.privatekey=6LeWLJkUAAAAAOADAt55lMyRxgI53Cf6hd5FK3wt
