se agrega codigo para descarga de archivos log y validaciones para habilitar el link del log y el link de presentar declaracion

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -189,6 +189,11 @@ sdh.reteica.calculo.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infObjet
 sdh.reteica.calculo.user=wspouser
 sdh.reteica.calculo.password=POw3bs3rv18
 
+sdh.reteica.log.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/docs/logReteICA
+sdh.reteica.log.user=wspouser
+sdh.reteica.log.password=POw3bs3rv18
+
+
 sdh.reteica.nfs.directory=C:\\dev\\
 
 #B
