se agrega codigo para servicio que avisa a trm cuando hay un archivo nuevo

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -193,6 +193,10 @@ sdh.reteica.log.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/docs/logRete
 sdh.reteica.log.user=wspouser
 sdh.reteica.log.password=POw3bs3rv18
 
+sdh.reteica.aviso.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/docs/avisoArchivo
+sdh.reteica.aviso.user=wspouser
+sdh.reteica.aviso.password=POw3bs3rv18
+
 
 sdh.reteica.nfs.directory=C:\\dev\\
 
