Validationg certifies p7Zip

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -215,7 +215,8 @@ mail.smtp.password=qecyfbujgqkpnvih
 mail.use.tls=true
 mail.smtp.starttls.enable=true
 
-import.p7z.max.upload.size.bytes=10240
+import.p7z.max.upload.size.bytes=10485760
+import.csv.max.upload.size.bytes'=10485760
 
 recaptcha.publickey=6LeWLJkUAAAAAO8X1Ed3CrbiC50v89miDYT1VmiJ
 recaptcha.privatekey=6LeWLJkUAAAAAOADAt55lMyRxgI53Cf6hd5FK3wt
