credibanco certificados - prueba 3

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -197,6 +197,12 @@ sdh.reteica.aviso.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/docs/aviso
 sdh.reteica.aviso.user=wspouser
 sdh.reteica.aviso.password=POw3bs3rv18
 
+# ------------- bank file validation -----------------
+sdh.reteica.bankFileValidation.getTypeFile.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/gestban/typfileBanco
+sdh.reteica.bankFileValidation.getTypeFile.user=wspouser
+sdh.reteica.bankFileValidation.getTypeFile.password=POw3bs3rv18
+# ------------- bank file validation -----------------
+
 
 sdh.reteica.nfs.directory=C:\\dev\\
 
