--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -203,6 +203,11 @@ sdh.reteica.bankFileValidation.getTypeFile.user=wspouser
 sdh.reteica.bankFileValidation.getTypeFile.password=POw3bs3rv18
 # ------------- bank file validation -----------------
 
+# ------------- Credibanco --------------
+credibanco.credential.privateKey.path=src/resources/rsa-private.pem
+credibanco.credential.publicKey.path=src/resources/rsa-public.pem
+# ------------- Credibanco --------------
+
 
 sdh.reteica.nfs.directory=C:\\dev\\
 
