--- a/hybris/hybris/bin/custom/sdh/sdhcore/.classpath
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/wsdl4j-1.6.2.jar"/>
 	<classpathentry kind="src" output="eclipsebin/classes" path="gensrc"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxrpc-api-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/java-jwt-3.8.1.jar"/>
 	<classpathentry kind="output" path="eclipsebin/notused"/>
 </classpath>
