--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -206,6 +206,7 @@ sdh.reteica.bankFileValidation.getTypeFile.password=POw3bs3rv18
 # ------------- Credibanco --------------
 credibanco.credential.privateKey.path=src/resources/rsa-private.pem
 credibanco.credential.publicKey.path=src/resources/rsa-public.pem
+credibanco.credential.webService.url=https://172.27.1.47:8022/Tilacino/api/sdh/initializeTransaction
 # ------------- Credibanco --------------
 
 
