ROP consumo de servicio

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -237,3 +237,8 @@ import.csv.max.upload.size.bytes'=10485760
 recaptcha.publickey=6LeWLJkUAAAAAO8X1Ed3CrbiC50v89miDYT1VmiJ
 recaptcha.privatekey=6LeWLJkUAAAAAOADAt55lMyRxgI53Cf6hd5FK3wt
 
+#------Se agrega ROP Maria Luisa-----#
+sdh.rop.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/descROP
+sdh.rop.user=wspouser
+sdh.rop.password=POw3bs3rv18
+
