Tramites (creacion) Consumo de WS para presentar seccion de documentos requeridos

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -106,6 +106,11 @@ sdh.calculoImpDelineacion.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/ca
 sdh.calculoImpDelineacion.user=wspouser
 sdh.calculoImpDelineacion.password=POw3bs3rv18
 #FIN Federico Flores Dimas - Delineacion urbana
+#INI Federico Flores Dimas - Tramites
+sdh.docTramites.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/crm/docTramites
+sdh.docTramites.user=wspouser
+sdh.docTramites.password=POw3bs3rv18
+#FIN Federico Flores Dimas - Tramites
 
 
 sdh.ica.infoObjeto.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infObjeto/ICA
