Tramites (creacion de caso) Consumo de WS para creacion de Caso (categorizacion y mensaje)

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -110,6 +110,9 @@ sdh.calculoImpDelineacion.password=POw3bs3rv18
 sdh.docTramites.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/crm/docTramites
 sdh.docTramites.user=wspouser
 sdh.docTramites.password=POw3bs3rv18
+sdh.creaCasos.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/crm/creaCasos
+sdh.creaCasos.user=wspouser
+sdh.creaCasos.password=POw3bs3rv18
 #FIN Federico Flores Dimas - Tramites
 
 
