Tramites (seguimiento) Funcionalidad para consultar Caso mediante numero de caso

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -113,6 +113,9 @@ sdh.docTramites.password=POw3bs3rv18
 sdh.creaCasos.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/crm/creaCasos
 sdh.creaCasos.user=wspouser
 sdh.creaCasos.password=POw3bs3rv18
+sdh.consCasos.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/crm/consCasos
+sdh.consCasos.user=wspouser
+sdh.consCasos.password=POw3bs3rv18
 #FIN Federico Flores Dimas - Tramites
 
 
