--- a/hybris/hybris/bin/custom/sdh/sdhbackoffice/.classpath
+++ b/hybris/hybris/bin/custom/sdh/sdhbackoffice/.classpath
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="src" path="/backoffice"/>
+	<classpathentry kind="src" output="eclipsebin/backoffice/classes" path="backoffice/src"/>
 	<classpathentry exported="true" kind="lib" path="resources"/>
 	<classpathentry kind="src" output="eclipsebin/classes" path="src"/>
-	<classpathentry kind="src" output="eclipsebin/backoffice/classes" path="backoffice/src"/>
-	<classpathentry kind="src" output="eclipsebin/classes" path="testsrc"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="/platform"/>
+	<classpathentry kind="src" path="gensrc"/>
+	<classpathentry exported="true" kind="src" path="/backoffice"/>
+	<classpathentry exported="true" kind="lib" path="resources/backoffice/sdhbackoffice_bof.jar"/>
+	<classpathentry kind="src" output="eclipsebin/classes" path="testsrc"/>
 	<classpathentry kind="output" path="eclipsebin/notused"/>
 </classpath>
