Cambios para generar el listado de declaraciones pendientes

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -259,3 +259,8 @@ sdh.rop.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/descROP
 sdh.rop.user=wspouser
 sdh.rop.password=POw3bs3rv18
 
+#------Se agrega ROP Maria Luisa-----#
+sdh.consulFirmas.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/consulFirmas
+sdh.consulFirmas.user=wspouser
+sdh.consulFirmas.password=POw3bs3rv18
+
