se agrega codigo para integrar el servicio en la vista

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -264,3 +264,8 @@ sdh.consulFirmas.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/consulFirmas
 sdh.consulFirmas.user=wspouser
 sdh.consulFirmas.password=POw3bs3rv18
 
+sdh.enviaFirmas.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/enviaFirmas
+sdh.enviaFirmas.user=wspouser
+sdh.enviaFirmas.password=POw3bs3rv18
+
+
