se garegan propiedades para nuevo servicio

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -268,4 +268,6 @@ sdh.enviaFirmas.url=http://sdhcipodev.shd.gov.co:50100/RESTAdapter/enviaFirmas
 sdh.enviaFirmas.user=wspouser
 sdh.enviaFirmas.password=POw3bs3rv18
 
-
+sdh.calculoPublicidad2.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/Publicidad2
+sdh.calculoPublicidad2.user=wspouser
+sdh.calculoPublicidad2.password=POw3bs3rv18
