Se agreaga servicio calcula gasolina 2

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -271,3 +271,8 @@ sdh.enviaFirmas.password=POw3bs3rv18
 sdh.calculoPublicidad2.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/Publicidad2
 sdh.calculoPublicidad2.user=wspouser
 sdh.calculoPublicidad2.password=POw3bs3rv18
+
+sdh.calculoGasolina2.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/calcGasolina2
+sdh.calculoGasolina2.user=wspouser
+sdh.calculoGasolina2.password=POw3bs3rv18
+
