--- a/hybris/hybris/bin/custom/sdh/sdhcore/.settings/org.eclipse.jdt.core.prefs
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/.settings/org.eclipse.jdt.core.prefs
@@ -129,6 +129,7 @@ org.eclipse.jdt.core.compiler.problem.unusedPrivateMember=ignore
 org.eclipse.jdt.core.compiler.problem.unusedTypeParameter=ignore
 org.eclipse.jdt.core.compiler.problem.unusedWarningToken=ignore
 org.eclipse.jdt.core.compiler.problem.varargsArgumentNeedCast=ignore
+org.eclipse.jdt.core.compiler.release=disabled
 org.eclipse.jdt.core.compiler.source=1.8
 org.eclipse.jdt.core.compiler.taskCaseSensitive=enabled
 org.eclipse.jdt.core.compiler.taskPriorities=
