Calcula ICA 2 services y facades

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -236,8 +236,6 @@ sdh.reteica.file.max.upload.size.bytes=10485760
 
 
 mail.from=jair.r04@gmail.com
-sdh.detallePublicidad.password=POw3bs3rv18
-mail.from=jair.r04@gmail.com
 mail.replyto=jair.r04@gmail.com
 mail.smtp.server=smtp.googlemail.com
 mail.smtp.port=587
@@ -275,4 +273,8 @@ sdh.calculoPublicidad2.password=POw3bs3rv18
 sdh.calculoGasolina2.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/calcGasolina2
 sdh.calculoGasolina2.user=wspouser
 sdh.calculoGasolina2.password=POw3bs3rv18
+
+sdh.calculoICA2.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/calcIca2
+sdh.calculoICA2.user=wspouser
+sdh.calculoICA2.password=POw3bs3rv18
 
