Declaracion (Generacion PDF) desarrollo inicial

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -117,7 +117,11 @@ sdh.consCasos.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/crm/consCasos
 sdh.consCasos.user=wspouser
 sdh.consCasos.password=POw3bs3rv18
 #FIN Federico Flores Dimas - Tramites
-
+#INI Federico Flores Dimas - PDF de declaracion
+sdh.declaraPDF.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/declaraPDF
+sdh.declaraPDF.user=wspouser
+sdh.declaraPDF.password=POw3bs3rv18
+#FIN Federico Flores Dimas - PDF de declaracion
 
 sdh.ica.infoObjeto.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infObjeto/ICA
 sdh.ica.infoObjeto.user=wspouser
