Se agrega uncionalidad para Obligaciones pendientes y se atienenden incidente 60 Mensaje de Mi RIT e incidencia 108 para bloquear opciones del periodo de Generar Declaración

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -280,3 +280,19 @@ sdh.calculoGasolina2.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculo
 sdh.calculoGasolina2.user=wspouser
 sdh.calculoGasolina2.password=POw3bs3rv18
 
+sdh.oblipublicidad.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/oblig/publicidad
+sdh.oblipublicidad.user=wspouser
+sdh.oblipublicidad.password=POw3bs3rv18
+
+sdh.obligasolina.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/oblig/gasolina
+sdh.obligasolina.user=wspouser
+sdh.obligasolina.password=POw3bs3rv18
+
+sdh.obliica.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/oblig/Ica
+sdh.obliica.user=wspouser
+sdh.obliica.password=POw3bs3rv18
+
+sdh.oblideli.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/oblig/delineacion
+sdh.oblideli.user=wspouser
+sdh.oblideli.password=POw3bs3rv18
+
