Declaraciones (imprimir) Funcionalidad de Publicidad Exterior en menu de Declaraciones - imprimir Declaracion

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -117,11 +117,14 @@ sdh.consCasos.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/crm/consCasos
 sdh.consCasos.user=wspouser
 sdh.consCasos.password=POw3bs3rv18
 #FIN Federico Flores Dimas - Tramites
-#INI Federico Flores Dimas - PDF de declaracion
+#INI Federico Flores Dimas - Declaraciones
+sdh.consulCertif.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/docs/consulCertif
+sdh.consulCertif.user=wspouser
+sdh.consulCertif.password=POw3bs3rv18
 sdh.declaraPDF.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/declaraPDF
 sdh.declaraPDF.user=wspouser
 sdh.declaraPDF.password=POw3bs3rv18
-#FIN Federico Flores Dimas - PDF de declaracion
+#FIN Federico Flores Dimas - Declaraciones
 
 sdh.ica.infoObjeto.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infObjeto/ICA
 sdh.ica.infoObjeto.user=wspouser
