Consultas (certificaciones de pago) Funcionalidad para Gasolina

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -124,6 +124,9 @@ sdh.consulCertif.password=POw3bs3rv18
 sdh.declaraPDF.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/declaraPDF
 sdh.declaraPDF.user=wspouser
 sdh.declaraPDF.password=POw3bs3rv18
+sdh.imprimePago.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/docs/imprimePago
+sdh.imprimePago.user=wspouser
+sdh.imprimePago.password=POw3bs3rv18
 #FIN Federico Flores Dimas - Declaraciones
 
 sdh.ica.infoObjeto.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infObjeto/ICA
