Se agregan cambios para consumo de servicio de detalle de vehiculos

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -303,4 +303,8 @@ sdh.obliica.password=POw3bs3rv18
 sdh.oblideli.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/oblig/delineacion
 sdh.oblideli.user=wspouser
 sdh.oblideli.password=POw3bs3rv18
-        
+
+sdh.detalle.vehiculo.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infoObjeto/vehicular
+sdh.detalle.vehiculo.user=wspouser
+sdh.detalle.vehiculo.password=POw3bs3rv18
+   
