--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -307,4 +307,5 @@ sdh.oblideli.password=POw3bs3rv18
 sdh.detalle.vehiculo.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infoObjeto/vehicular
 sdh.detalle.vehiculo.user=wspouser
 sdh.detalle.vehiculo.password=POw3bs3rv18
-   
+
+gestion.bancaria.certificados.path=C:\\Users\\edson.roa\\Desktop\\server\\
