--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -308,4 +308,6 @@ sdh.detalle.vehiculo.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infoObj
 sdh.detalle.vehiculo.user=wspouser
 sdh.detalle.vehiculo.password=POw3bs3rv18
 
-gestion.bancaria.certificados.path=C:\\Users\\edson.roa\\Desktop\\server\\
+gestion.bancaria.certificados.path=/usr/sap/SDH/updatedCertificates/
+gestion.bancaria.certificados.autoridades.path=/usr/sap/SDH/autoridades
+gestion.bancaria.certificados.aprobados.path=/usr/sap/SDH/approvedCertificates/
