--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -308,6 +308,7 @@ sdh.detalle.vehiculo.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infoObj
 sdh.detalle.vehiculo.user=wspouser
 sdh.detalle.vehiculo.password=POw3bs3rv18
 
+#Gestion Bancaria
 gestion.bancaria.certificados.path=/usr/sap/SDH/gestionBancaria/updatedCertificates/
 gestion.bancaria.certificados.autoridades.path=/usr/sap/SDH/gestionBancaria/autoridades
 gestion.bancaria.certificados.aprobados.path=/usr/sap/SDH/gestionBancaria/approvedCertificates/
