--- a/hybris/hybris/bin/custom/sdh/sdhcore/.classpath
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/.classpath
@@ -1,122 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="src" path="/xyformsservices"/>
-	<classpathentry kind="src" output="eclipsebin/classes" path="testsrc"/>
-	<classpathentry exported="true" kind="src" path="/acceleratorcms"/>
-	<classpathentry exported="true" kind="lib" path="lib/axis-1.4.jar"/>
-	<classpathentry exported="true" kind="src" path="/solrserver"/>
-	<classpathentry exported="true" kind="lib" path="resources"/>
-	<classpathentry kind="src" output="eclipsebin/classes" path="src"/>
-	<classpathentry exported="true" kind="src" path="/sdhpse"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/acceleratorfacades"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/npmtestancillary"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/xyformscommercebackoffice"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/relationshipexchange"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/xyformscommerceservices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/basecommercebackoffice"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/cms2"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/relationshipservices"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/addonsupport"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/configurablebundlecockpits"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/relationshipbackoffice"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/assistedservicefacades"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/webservicescommons"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/cmswebservices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/platformbackoffice"/>
+	<classpathentry exported="true" kind="lib" path="lib/java-jwt-3.8.1.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/datahubadapter"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sdhfacades"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/publicsectorconsignmentexchange"/>
+	<classpathentry exported="true" kind="lib" path="lib/axis-1.4.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ticketsystem"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/commercefacades"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/commerceservices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/assistedservicestorefront"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/atddimpex"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/billservices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/cockpit"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/datahubclient"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/voucherbackoffice"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/xyformsweb"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/billatddtests"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/permissionswebservices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/springintegrationlibs"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/xyformsbackoffice"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/publicsectorfacades"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/assistedserviceatddtests"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/customersupportbackoffice"/>
 	<classpathentry exported="true" kind="src" path="/platform"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/cmssmarteditwebservices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/publicsectorcockpits"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sdhbackoffice"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/acceleratorstorefrontcommons"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/publicsectordocmanagement"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/publicsectoratddtests"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/acceleratorservices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/publicsectorbackoffice"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/xyformscommerceatddtests"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/cmsfacades"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/relationshipatddtests"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/cms2lib"/>
+	<classpathentry exported="true" kind="src" path="/acceleratorcms"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/commercesearchbackoffice"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/payment"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/xyformsfacades"/>
+	<classpathentry exported="true" kind="lib" path="resources"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/customerreview"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/promotions"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/smarteditwebservices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/commercesearch"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/smarteditaddon"/>
+	<classpathentry exported="true" kind="src" path="/xyformsservices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/publicsectorservices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tomcatembeddedserver"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/config"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/admincockpit"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/atddengine"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/productcockpit"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sdhrelationshipsaddon"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/relationshipfacades"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/solrfacetsearch"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/backoffice"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/permissionsfacades"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/commercewebservicescommons"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/solrfacetsearchbackoffice"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/cscockpit"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sdhinitialdata"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sdhstorefront"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/dataimportcommons"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/cmssmartedit"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sdhbillsaddon"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/auditreportservices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/xyformscockpits"/>
+	<classpathentry exported="true" kind="src" path="/solrserver"/>
+	<classpathentry kind="src" output="eclipsebin/classes" path="src"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/voucher"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sdhpsaddon"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/embeddedserver"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/previewwebservices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/publicsectorfulfilment"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ycommercewebservices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/xyformsatddtests"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/commerceservicesatddtests"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/configurablebundleservices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/billbackoffice"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/billfacades"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/smartedit"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/npmancillary"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/publicsectordocmanagementexchange"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/xyformsstorefrontcommons"/>
+	<classpathentry exported="true" kind="lib" path="lib/BDGCrypto.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/xyformscommercecockpits"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/billexchange"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/datahubbackoffice"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/xyformscommercefacades"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/cmsbackoffice"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/assistedserviceservices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ticketsystembackoffice"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/commerceservicesbackoffice"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/groovynature"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/configurablebundlefacades"/>
+	<classpathentry kind="src" output="eclipsebin/classes" path="testsrc"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/publicsectorstore"/>
+	<classpathentry exported="true" kind="src" path="/sdhpse"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/basecommerce"/>
 	<classpathentry exported="true" kind="lib" path="lib/wsdl4j-1.6.2.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/promotionsbackoffice"/>
 	<classpathentry kind="src" output="eclipsebin/classes" path="gensrc"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxrpc-api-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/java-jwt-3.8.1.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/acceleratorfacades"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/acceleratorservices"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/acceleratorstorefrontcommons"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/addonsupport"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/admincockpit"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/assistedserviceatddtests"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/assistedservicefacades"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/assistedserviceservices"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/assistedservicestorefront"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/atddengine"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/atddimpex"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/auditreportservices"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/backoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/basecommerce"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/basecommercebackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/billatddtests"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/billbackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/billexchange"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/billfacades"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/billservices"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/cms2"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/cms2lib"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/cmsbackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/cmsfacades"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/cmssmartedit"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/cmssmarteditwebservices"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/cmswebservices"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/cockpit"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/commercefacades"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/commercesearch"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/commercesearchbackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/commerceservices"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/commerceservicesatddtests"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/commerceservicesbackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/commercewebservicescommons"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/config"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/configurablebundlecockpits"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/configurablebundlefacades"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/configurablebundleservices"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/cscockpit"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/customerreview"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/customersupportbackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/datahubadapter"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/datahubbackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/datahubclient"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/dataimportcommons"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/embeddedserver"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/groovynature"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/npmancillary"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/npmtestancillary"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/payment"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/permissionsfacades"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/permissionswebservices"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/platformbackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/previewwebservices"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/productcockpit"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/promotions"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/promotionsbackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/publicsectoratddtests"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/publicsectorbackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/publicsectorcockpits"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/publicsectorconsignmentexchange"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/publicsectordocmanagement"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/publicsectordocmanagementexchange"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/publicsectorfacades"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/publicsectorfulfilment"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/publicsectorservices"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/publicsectorstore"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/relationshipatddtests"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/relationshipbackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/relationshipexchange"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/relationshipfacades"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/relationshipservices"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sdhbackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sdhbillsaddon"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sdhfacades"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sdhinitialdata"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sdhpsaddon"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sdhrelationshipsaddon"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sdhstorefront"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/smartedit"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/smarteditaddon"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/smarteditwebservices"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/solrfacetsearch"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/solrfacetsearchbackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/springintegrationlibs"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ticketsystem"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ticketsystembackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/tomcatembeddedserver"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/voucher"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/voucherbackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/webservicescommons"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/xyformsatddtests"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/xyformsbackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/xyformscockpits"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/xyformscommerceatddtests"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/xyformscommercebackoffice"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/xyformscommercecockpits"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/xyformscommercefacades"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/xyformscommerceservices"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/xyformsfacades"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/xyformsstorefrontcommons"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/xyformsweb"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ycommercewebservices"/>
 	<classpathentry kind="output" path="eclipsebin/notused"/>
 </classpath>
