Se agregan cambios para calculo de vehiculos

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -312,3 +312,8 @@ sdh.detalle.vehiculo.password=POw3bs3rv18
 gestion.bancaria.certificados.path=/usr/sap/SDH/gestionBancaria/updatedCertificates/
 gestion.bancaria.certificados.autoridades.path=/usr/sap/SDH/gestionBancaria/autoridades
 gestion.bancaria.certificados.aprobados.path=/usr/sap/SDH/gestionBancaria/approvedCertificates/
+
+#Calculo Vehiculos
+sdh.calcvehiculos.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/declara/vehicular
+sdh.calcvehiculos.user=wspouser
+sdh.calcvehiculos.password=POw3bs3rv18
