Reteica (declaracion con Agente Autorizado) Funcionalidad inicial

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -128,6 +128,11 @@ sdh.imprimePago.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/docs/imprime
 sdh.imprimePago.user=wspouser
 sdh.imprimePago.password=POw3bs3rv18
 #FIN Federico Flores Dimas - Declaraciones
+#INI Federico Flores Dimas - reteica
+sdh.ReteIca2.url:https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/ReteIca2
+sdh.ReteIca2.user=wspouser
+sdh.ReteIca2.password=POw3bs3rv18
+#FIN Federico Flores Dimas - reteica2
 
 sdh.ica.infoObjeto.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infObjeto/ICA
 sdh.ica.infoObjeto.user=wspouser
