Gestion bancaria ws - fileConcilia

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -318,6 +318,10 @@ gestion.bancaria.certificados.path=/usr/sap/SDH/gestionBancaria/updatedCertifica
 gestion.bancaria.certificados.autoridades.path=/usr/sap/SDH/gestionBancaria/autoridades
 gestion.bancaria.certificados.aprobados.path=/usr/sap/SDH/gestionBancaria/approvedCertificates/
 
+gestion.bancaria.ws.fileConcilia.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/gestbanca/FileConcilia
+gestion.bancaria.ws.fileConcilia.user=wspouser
+gestion.bancaria.ws.fileConcilia.password=POw3bs3rv18
+
 #Calculo Vehiculos
 sdh.calcvehiculos.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/declara/vehicular
 sdh.calcvehiculos.user=wspouser
