gestion bancaria - descargar achivo

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -322,6 +322,10 @@ gestion.bancaria.ws.fileConcilia.url=https://sdhcipodev.shd.gov.co:50101/RESTAda
 gestion.bancaria.ws.fileConcilia.user=wspouser
 gestion.bancaria.ws.fileConcilia.password=POw3bs3rv18
 
+gestion.bancaria.ws.consultas.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/gestbanca/FileConsulta
+gestion.bancaria.ws.consultas.user=wspouser
+gestion.bancaria.ws.consultas.password=POw3bs3rv18
+
 #Calculo Vehiculos
 sdh.calcvehiculos.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/declara/vehicular
 sdh.calcvehiculos.user=wspouser
