--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -314,9 +314,12 @@ sdh.detalle.vehiculo.user=wspouser
 sdh.detalle.vehiculo.password=POw3bs3rv18
 
 #Gestion Bancaria
-gestion.bancaria.certificados.path=/usr/sap/SDH/gestionBancaria/updatedCertificates/
-gestion.bancaria.certificados.autoridades.path=/usr/sap/SDH/gestionBancaria/autoridades
-gestion.bancaria.certificados.aprobados.path=/usr/sap/SDH/gestionBancaria/approvedCertificates/
+#gestion.bancaria.certificados.path=/usr/sap/SDH/gestionBancaria/updatedCertificates/
+#gestion.bancaria.certificados.autoridades.path=/usr/sap/SDH/gestionBancaria/autoridades
+#gestion.bancaria.certificados.aprobados.path=/usr/sap/SDH/gestionBancaria/approvedCertificates/
+gestion.bancaria.certificados.path=C:\\SDH\\gestionBancaria\\updatedCertificates\\
+gestion.bancaria.certificados.autoridades.path=C:\\SDH\\gestionBancaria\\autoridades
+gestion.bancaria.certificados.aprobados.path=C:\\SDH\\gestionBancaria\\approvedCertificates\\
 
 gestion.bancaria.ws.fileConcilia.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/gestbanca/FileConcilia
 gestion.bancaria.ws.fileConcilia.user=wspouser
