Pagina para Server error - redirige a la pagina de seleccion de roles

--- a/hybris/hybris/bin/custom/sdh/sdhstorefront/web/webroot/WEB-INF/web.xml
+++ b/hybris/hybris/bin/custom/sdh/sdhstorefront/web/webroot/WEB-INF/web.xml
@@ -219,7 +219,8 @@
 
 	 <!-- Comment out to see error stack for development -->
 	<error-page>
-		<location>/WEB-INF/common/pages/error/serverError.jsp</location>
+<!-- 		<location>/WEB-INF/common/pages/error/serverError.jsp</location> -->
+		<location>/WEB-INF/common/pages/error/serverErrorGeneral.jsp</location>
 	</error-page>
 
 
